add dynamo db local

--- a/dip.yml
+++ b/dip.yml
@@ -1,41 +1,75 @@
 version: '4'
 
+environment:
+  RAILS_ENV: development
+
 compose:
   files:
     - docker-compose.yml
 
 interaction:
-  bash:
+  sh:
     description: Open the app container bash shell
-    service: rails-app
+    service: rails-backend
     command: /bin/bash
-
-  dev:
-    service: rails-app
-    command: exit
-    subcommands:
-      console:
-        description: Open the gem console
-        command: ./bin/console
-      clean:
-        description: Clean dependencies
-        command: rm -rf Gemfile.lock
+    compose_run_options: [no-deps]
 
   bundle:
-    description: Run Bundler commands
-    service: rails-app
+    description: Run bundler command
+    service: rails-backend
     command: bundle
+    compose_run_options: [no-deps]
 
-  rspec:
-    description: Run Rspec commands
-    service: rails-app
-    command: bundle exec rspec
+  rake:
+    description: Run rake command
+    service: rails-backend
+    command: bundle exec rake
 
-  rubocop:
-    description: Run Rubocop commands
-    service: rails-app
+  rails:
+    description: Run rails command
+    service: rails-backend
+    command: bundle exec rails
+    subcommands:
+      s:
+        description: Start rails server
+        service: rails-app
+        compose_run_options: [service-ports]
+
+  yarn:
+    description: Run yarn command
+    service: rails-backend
+    command: yarn
+
+  minitest:
+    description: Run minitest
+    service: rails-backend
+    environment:
+      RAILS_ENV: test
+    command: bundle exec rails test
+
+  cop:
+    description: Run rubocop
+    service: rails-backend
+    default_args: -a
     command: bundle exec rubocop
 
+  psql:
+    description: Run psql console
+    service: postgres
+    command: psql -h postgres -U postgres -d postgres
+
+  inspect_all:
+    description: Run all checkers
+    service: rails-backend
+    command: bundle exec license_finder
+    command: bundle exec rails test
+    command: bundle exec rails_best_practices .
+    command: bundle exec bundle-audit
+    command: bundle exec brakeman
+
 provision:
-  - dip rails-app clean
-  - dip bundle install
+  - dip compose up -d postgres
+  - dip yarn install
+  - dip sh -c "./bin/setup 2> /dev/null; exit 0"
+  - dip sh -c ./bin/setup
+  - dip sh -c "RAILS_ENV=test ./bin/setup"
