--- a/.dockerdev/dynamo-db-local/Dockerfile
+++ b/.dockerdev/dynamo-db-local/Dockerfile
@@ -1,4 +1,4 @@
 FROM amazon/dynamodb-local
-WORKDIR /home/dynamodblocal
+WORKDIR /home/dynamo-db-local
 # UID=1000 → DynamoDB Local の実行ユーザ
 RUN mkdir data && chown -R 1000 data
