--- a/.dockerdev/rails-psql/Dockerfile
+++ b/.dockerdev/rails-psql/Dockerfile
@@ -6,31 +6,34 @@ ARG PG_MAJOR
 ARG NODE_MAJOR
 ARG BUNDLER_VERSION
 ARG YARN_VERSION
+ARG RAILS_VERSION
 
-# ソースリストにPostgreSQLを追加
-RUN curl -sSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -\
-  && echo 'deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main' $PG_MAJOR > /etc/apt/sources.list.d/pgdg.list
 
-# ソースリストにNodeJSを追加
-RUN curl -sL https://deb.nodesource.com/setup_$NODE_MAJOR.x | bash -
-
-# ソースリストにYarnを追加
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -\
-  && echo 'deb http://dl.yarnpkg.com/debian/ stable main' > /etc/apt/sources.list.d/yarn.list
-
-# 依存関係をインストール
-# 外部のAptfileでやってる（後ほどお楽しみに！）
-COPY .dockerdev/rails-psql/Aptfile /tmp/Aptfile
 RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get -yq dist-upgrade &&\
+  DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends curl gnupg2 &&\
+  # ソースリストにPostgreSQLを追加
+  curl -sSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - &&\
+  echo 'deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main' $PG_MAJOR > /etc/apt/sources.list.d/pgdg.list &&\
+  # ソースリストにNodeJSを追加
+  curl -sL https://deb.nodesource.com/setup_$NODE_MAJOR.x | bash - &&\
+  # ソースリストにYarnを追加
+  curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - &&\
+  echo 'deb http://dl.yarnpkg.com/debian/ stable main' > /etc/apt/sources.list.d/yarn.list &&\
+  apt-get update -qq &&\
   DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends\
   build-essential\
   postgresql-client-$PG_MAJOR\
+  libpq-dev\
   nodejs\
   yarn=$YARN_VERSION-1\
   $(cat /tmp/Aptfile | xargs) &&\
   apt-get clean &&\
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* &&\
   truncate -s 0 /var/log/*log
+
+# 依存関係をインストール
+# 外部のAptfileでやってる（後ほどお楽しみに！）
+COPY .dockerdev/rails-psql/Aptfile /tmp/Aptfile
 
 # bundlerとPATHを設定
 ENV LANG=C.UTF-8\
@@ -44,9 +47,8 @@ ENV PATH /app/bin:$BUNDLE_BIN:$PATH
 
 # RubyGemsをアップグレードして必要なバージョンのbundlerをインストール
 RUN gem update --system &&\
-  gem install bundler:$BUNDLER_VERSION
-
-# appコードを置くディレクトリを作成
-RUN mkdir -p /app
+  gem install bundler:$BUNDLER_VERSION &&\
+  gem install rails:$RAILS_VERSION &&\
+  mkdir -p /app
 
 WORKDIR /app
