--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,75 @@
 version: '3.7'
+
+x-var: &APP_IMAGE_TAG
+  "application-name:1.0.0"
+x-var: &RUBY_VERSION
+  "2.6-slim"
+x-var: &RAILS_VERSION
+  6.0.2
+x-var: &PG_MAJOR
+  11
+x-var: &POSTGRES
+  "postgres:11"
+x-var: &NODE_MAJOR
+  12
+x-var: &YARN_VERSION
+  1.13.0
+x-var: &BUNDLER_VERSION
+  2.0.2
+x-var: &DATABASE_HOST
+  "postgres"
+x-var: &DATABASE_USER
+  "postgres"
+x-var: &DATABASE_PASSWORD
+  "postgres"
+
+
+x-rails-app: &rails-app
+  build:
+    context: .
+    dockerfile: ./.dockerdev/rails-psql/Dockerfile
+    args:
+      RUBY_VERSION: *RUBY_VERSION
+      RAILS_VERSION: *RAILS_VERSION
+      PG_MAJOR: *PG_MAJOR
+      NODE_MAJOR: *NODE_MAJOR
+      YARN_VERSION: *YARN_VERSION
+      BUNDLER_VERSION: *BUNDLER_VERSION
+  environment: &env
+    NODE_ENV: development
+    RAILS_ENV: ${RAILS_ENV:-development}
+  image: *APP_IMAGE_TAG
+  tmpfs:
+    - /tmp
+
+x-rails-backend: &rails-backend
+  <<: *rails-app
+  stdin_open: true
+  tty: true
+  volumes:
+    - ./rails:/app:cached
+    - bundle:/bundle
+    - ./rails/node_modules:/app/node_modules:cached
+    - packs:/app/public/packs
+    - rails_cache:/app/tmp/cache
+    - .dockerdev/.psqlrc:/root/.psqlrc:ro
+    - .dockerdev/.bashrc:/root/.bashrc:ro
+  environment:
+    <<: *env
+    DATABASE_HOST: *DATABASE_HOST
+    DATABASE_USER: *DATABASE_USER
+    DATABASE_PASSWORD: *DATABASE_PASSWORD
+    BOOTSNAP_CACHE_DIR: /bundle/_bootsnap
+    WEBPACKER_DEV_SERVER_HOST: webpacker
+    WEB_CONCURRENCY: 1
+    HISTFILE: /app/log/.bash_history
+    PSQL_HISTFILE: /app/log/.psql_history
+    EDITOR: vi
+  depends_on:
+    - postgres
+    - dynamo-db-local
+    - localstack
+
 services:
   dynamo-local-admin:
     image: instructure/dynamo-local-admin
@@ -8,21 +79,26 @@ services:
       DYNAMO_ENDPOINT: http://dynamodb:5984
     depends_on:
       - dynamo-db-local
+
   postgres:
-    image: postgres:11.4
+    image: *POSTGRES
     volumes:
       - ./.dockerdev/.psqlrc:/root/.psqlrc:ro
       - postgres:/var/lib/postgresql/data
       - ./log:/root/log:cached
     environment:
-      - PSQL_HISTFILE=/root/log/.psql_history
+      PSQL_HISTFILE: /root/log/.psql_history
+      POSTGRES_DB: postgres
+      POSTGRES_USER: *DATABASE_USER
+      POSTGRES_PASSWORD: *DATABASE_PASSWORD
     ports:
       - 5432
 
-
   dynamo-db-local:
     container_name: dynamodb
-    build: ./.dockerdev/dynamo-db-local/Dockerfile
+    build: 
+      context: .
+      dockerfile: ./.dockerdev/dynamo-db-local/Dockerfile
     volumes:
       - dynamo-db-local:/home/dynamo-db-local/data
     ports:
@@ -34,64 +110,21 @@ services:
       - SERVICES=s3,sqs,dynamo
       - DATA_DIR=/tmp/localstack/data
 
-  rails-app: &rails-app
-    build:
-      context: .
-      dockerfile: ./.dockerdev/rails-psql/Dockerfile
-      args:
-        RUBY_VERSION: '2.7.1'
-        PG_MAJOR: '11'
-        NODE_MAJOR: '12'
-        YARN_VERSION: '1.13.0'
-        BUNDLER_VERSION: '2.0.2'
-    image: application-name:1.0.0
-    tmpfs:
-      - /tmp
 
-  rails-backend: &rails-backend
-    <<: *rails-app
-    stdin_open: true
-    tty: true
-    volumes:
-      - ./rails:/app:cached
-      - rails_cache:/app/tmp/cache
-      - bundle:/bundle
-      - node_modules:/app/node_modules
-      - packs:/app/public/packs
-      - .dockerdev/.psqlrc:/root/.psqlrc:ro
-    environment:
-      - NODE_ENV=development
-      - RAILS_ENV=${RAILS_ENV:-development}
-      - REDIS_URL=redis://redis:6379/
-      - DATABASE_URL=postgres://postgres:postgres@postgres:5432
-      - DYNAMO_URL=http://dynamodb:5984
-      - BOOTSNAP_CACHE_DIR=/bundle/bootsnap
-      - WEBPACKER_DEV_SERVER_HOST=webpacker
-      - WEB_CONCURRENCY=1
-      - HISTFILE=/app/log/.bash_history
-      - PSQL_HISTFILE=/app/log/.psql_history
-      - EDITOR=vi
-    depends_on:
-      - postgres
-      - dynamo-db-local
-      - localstack
-      - webpacker
-      # - redis
+  rails-backend:
+    <<: *rails-backend
 
   runner:
     <<: *rails-backend
     command: /bin/bash
-    ports:
-      - '3000:3000'
-      - '3002:3002'
 
   rails-server:
     <<: *rails-backend
-    command: bundle exec rails server -b 0.0.0.0
+    command: ./bin/rails s -p 3000 -b 0.0.0.0
     ports:
       - '3000:3000'
-    # depends_on:
-    #   - webpacker
+    depends_on:
+      - webpacker
 
   # sidekiq:
   #   <<: *backend
@@ -106,19 +139,18 @@ services:
   #     - 6379
 
   webpacker:
-    <<: *rails-app
+    <<: *rails-backend
     command: ./bin/webpack-dev-server
     ports:
-      - '3035:3035'
+      - "3035:3035"
     volumes:
       - ./rails:/app:cached
       - bundle:/bundle
-      - node_modules:/app/node_modules
+      - ./rails/node_modules:/app/node_modules:cached
       - packs:/app/public/packs
     environment:
-      - NODE_ENV=${NODE_ENV:-development}
-      - RAILS_ENV=${RAILS_ENV:-development}
-      - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
+      <<: *env
+      WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
 
 volumes:
   postgres:
